test/programs/bad/typechecker/reset_2.lq
resetQbit :: () -> Qbit
resetQbit _ = reset (measure (new @0))
